--- a/backend-express/.env.example
+++ b/backend-express/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://user:password@kenzie_med:5432/customer_base"
+DATABASE_URL="postgres://user:password@host:5432/customer_base_db"
 SECRET_KEY=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
