--- a/backend-express/.env.example
+++ b/backend-express/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL="postgres://user:password@host:5432/customer_base_db"
+DATABASE_URL="postgres://postgres_user:postgres_password@customer_base_db:5432/customer_base_db"
 SECRET_KEY=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_DB=customer_base_db
